--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -10,21 +10,57 @@
     <div class="form-group">
         <label for="name">Name</label>
         <input type="name" id="name" name="name" class="form-control" placeholder="Enter Name" </div> <div
-            lass="form-group">
+            class="form-group">
+
         <label for="username">Username</label>
         <input type="username" id="username" name="username" class="form-control" placeholder="Enter username" </div>
             <div class="form-group">
+
         <label for="email">Email</label>
         <input type="email" id="email" name="email" class="form-control" placeholder="Enter Email" </div> <div
             class="form-group">
+
         <label for="password">Password</label>
         <input type="password" id="password" name="password" class="form-control" placeholder="Create Password" </div>
             <div class="form-group">
+
         <label for="password2">Confirm Password</label>
         <input type="password" id="password2" name="password2" class="form-control" placeholder="Confirm Password"
-            </div> <button type="submit" class="btn btn-primary btn-block">
+            </div> <div class="form-group">
+
+        <label for="userUrl">UserURL</label>
+        <input type="userUrl" id="userUrl" name="userUrl" class="form-control" placeholder="Enter your Url" </div> <div
+            class="form-group">
+
+        <label for="language1">languages(list all that applies)</label>
+        <input type="language1" id="language1" name="language1" class="form-control" placeholder="Language 1" </div>
+            <div class="form-group">
+        <label for="language2"></label>
+        <input type="language2" id="language2" name="language2" class="form-control" placeholder="Language 2" </div>
+            <div class="form-group">
+        <label for="language3"></label>
+        <input type="language3" id="language3" name="language3" class="form-control" placeholder="Language 3" </div>
+            <div class="form-group">
+
+
+        <label for="project1">Projects(list all that applies)</label>
+        <input type="project1" id="projects1" name="project1" class="form-control" placeholder="project 1" </div> <div
+            class="form-group">
+        <label for="project2"></label>
+        <input type="project2" id="projects2" name="project2" class="form-control" placeholder="project 2" </div> <div
+            class="form-group">
+        <label for="project2"></label>
+        <input type="project3" id="projects3" name="project3" class="form-control" placeholder="project 3" </div> <div
+            class="form-group">
+
+
+
+
+
+
+    </div> <button type="submit" class="btn btn-primary btn-block">
         Register
-        </button>
+    </button>
 </form>
 <p class="lead mt-4">Have An Account? <a href="/users/login">Login</a></p>
 </div>
